fix: adjust gradient stops, reposition hamburger menu, feat: implem blur when nav menu is open on mobile

--- a/home.css
+++ b/home.css
@@ -26,8 +26,8 @@
 	bottom: 0;
 	background: linear-gradient(to left, 
 		rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.4) 35%, 
-		rgba(0,0,0,0.8) 75%,
+        rgba(0,0,0,0.4) 30%, 
+		rgba(0,0,0,0.8) 70%,
 		rgba(0,0,0,1) 100%
 	);
 	pointer-events: none;
